<resources>
    <string name="app_name">Job News</string>
    <string name="menu_home">Home</string>
    <string name="menu_suggested">Suggested</string>
    <string name="menu_category">Category</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="demo_text"><![CDATA[Get acquainted with our services → Netpeak Blog All Sections ServicesClientsAbout UsPartnersContacts Request a Quote Log in Guest post 20 Best Android Animation UI/UX Libraries Anastasiia Taran 29111 27 0 Level: Jazz 9 Mobile applications are getting less static. Interface animations are becoming an integral part of modern apps, making them more user-friendly and navigation through them simpler. Android projects could use animations for several purposes, specifically to: display application status, since the user would be pleased to receive a response to actions he/she triggers. Besides, an appropriate animation would brighten up the user’s expectation when the page content is updated; connect various phases of a multiphase process, thereby allowing for a smooth transition between the steps and seamless interaction with the user; embed new elements, fitting them harmoniously into the content; simplify the interaction process, informing the user what he/she is going through at the moment. Animations serve to reinforce the user’s action. Nevertheless, rather fanciful or complex effects distract and confuse him/her. As a result, developers should always maintain the golden medium. Thus, the more you know about animation UI/UX libraries for the Android platform, the easier it is for you to apply them in a smart way. So, shall we start? 1. AndroidViewAnimations AndroidViewAnimations11 We will begin with AndroidViewAnimations. It is a simple Android library that enables you to create view shake animations. Its developer was inspired by an iOS library, since Android had no analogue at that time. The library allows you to implement a wide variety of animations, including: bounce; fade; flip; rotate; slide; zoom. Moreover, each item has its own subsections with different effects. 2. ListViewAnimations ListViewAnimations ListViewAnimations is another open source library that enables developers to create ListViews with animations. It has the following features: appearance animations for items in ListViews, GridViews, other AbsListViews; built-in animations include Alpha, SwingRightIn, SwingLeftIn, SwingBottomIn, SwingRightIn and ScaleIn; other animations can easily be added; supports StickyListHeaders; besides, you can add other implementations without any difficulties; Swipe-to-Dismiss, Swipe-To-Dismiss with contextual undo; Drag-and-Drop reordering; an animated process of adding items; you are able to smoothly expand your items to reveal more content. 3. AndroidImageSlider AndroidImageSlider AndroidImageSlider is an excellent example of an attractive, easy-to-use open source slideshow library. We believe it’s one of the most convenient image sliders on the Android platform. With its help, you can easily upload your own images from an internet URL, drawable, or file and animate the slideshow with a range of different effects. 4. Transition Everywhere Transition Everywhere Transition Everywhere is a backport of Transitions API for Android 4.0 and above. It allows you to change duration, interpolator and start delay for animators inside Transition. It has several transition types: Slide; Explode and Propagation; ChangeImageTransfor; Path motion; TransitionName; Scale; Rotate. The library can come in handy when you are going to animate changes to view position and size, extend Visibility class and perform fade in and fade out animations, or put the animations in sequential order. 5. Android Ripple Background Android Ripple Background1 Android Ripple Background2 Android Ripple Background enables creating various ripple animation for your Android app. You can change their color, speed of the wave, and the number of ripples. It will be useful if you are going to animate a button click response or an incoming phone call, etc. 6. Aphid FlipView Aphid FlipView1 Aphid FlipView2 Aphid FlipView is a UI component to accomplish the flipping animation similar to Flipboard. It supports: flipping horizontally; an event listener to get notified when flipping finishes; content reloading when flipping; different bitmap format for animation, which can be used to reduce peak memory consumption. 7. FragmentTransactionExtended FragmentTransactionExtended1 FragmentTransactionExtended2 FragmentTransactionExtended is a library equipped with a set of custom animations between fragments. Compared to FragmentTransaction, which accepts only simple animations, it got its list extended with more complex effects of the following animations: scale; fade; slide; glide; stack; rotate; zoom. 8. KenBurnsView KenBurnsView KenBurnsView is a library that provides an extension to ImageView, which, in turn, creates an immersive experience by animating its drawable with the help of the Ken Burns Effect. Advantages of the library are: you can change the duration and the interpolator of transitions and pause/resume them. you can define how the rectangles to be zoomed and panned will be generated; it seamlessly works out of the box with your favorite image loader library; you can start using it right away. 9. Rebound Rebound Rebound is a Java library developed by Facebook. It allows modeling spring dynamics and thereby implementing realistic animations in apps. Rebound is not a general purpose physics library; however, spring dynamics can be used to introduce a wide variety of animations. Its simplicity makes it easy to integrate and use as a building block for creating more complex components and effects. 10. Reachability Reachability Reachability is a library that enables easy accessing the top of the mobile phone screen. Animations implemented in iPhone 6 and iPhone 6 Plus inspired its developer. Here you can move either the screen or the hover. 11. AnimationEasingFunctions AnimationEasingFunctions AnimationEasingFunctions library was created based on AndroidViewAnimation with the help of Easing Functions. It is also aimed at facilitating the process of animation and making animations more real. You can implement it as a grade or just like a glider. 12. EasyAndroidAnimarions EasyAndroidAnimarions EasyAndroidAnimations is another Android library that makes animation easier. It has above 50 built-in animations that will help you to implement many effects in your app with only several lines of code. You can include the library directly in your Gradle project. 13. InterfaceInteraction InterfaceInteraction1 InterfaceInteraction2 InterfaceInteraction development was bolstered by the PhysicsLayout project. The library captures any interface (screen or view) and throws its UI elements over under the influence of gravity. As a result, one can move them from sideways obliquely. The gravity effect relies on the device’s accelerometer data. The stop method returns all UI elements back in place. Another feature is a shake animation for UI elements. The effects can easily be used to decorate any application. 14. ViewRevealAnimator ViewRevealAnimator ViewRevealAnimator view with a lollipop style reveals effect. It enables you to create a smooth animated transition between items. 15. ArcAnimator ArcAnimator1 ArcAnimator2 ArcAnimator is a library that helps create arc transition animation for Android 2.3. and above. 16. SearchMenuAnim SearchMenuAnim SearchMenuAnim allows creating a clear and effortless transition from a search icon to a search field. 17. Cross View Cross View1 Cross View2 Cross View animates across in your app. The library enables you to define color and set a state directly. You can also set an animation duration in milliseconds. 18. WoWoViewPager WoWoViewPager1 WoWoViewPager2 WoWoViewPager combines ViewPager and Animations to provide a simple way to create guide pages of the app. It supports some simple animations, namely: translation; scale; alpha; background color animations; gif-playing; SVG-drawing; path-drawing. 19. Lottie Lottie1Lottie2 Lottie is a mobile library for Android and iOS that parses Adobe After Effects animations exported as JSON with Bodymovin and renders them natively on mobile. By its means, designers can create and ship beautiful animations without an engineer painstakingly recreating it by hand. Lottie’s major advantage is the support of a great variety of After Effects features. 20. FerrisWheelView FerrisWheelView FerrisWheelView is a library that allows implementing an animated Ferris Wheel. To sum up Depending on the situation, it is easier to create some animations with the help of the existing libraries, but whereas your idea has a lot of specific details, you will need a custom solution. Those above will definitely favor the development process of your app, reducing financial and time inputs. Nevertheless, you should always bear in mind that: animations should be functional, improving the user experience; only appropriate elements should be animated. Animating every detail makes no sense. Besides, implementing resource-intensive elements would decrease your app performance and affect interaction with the user; Render animations if you have such an opportunity, it will play into your hands as well. 27 3.75 (3.75 out of 5 based on 36 marks) Found a mistake? Select it and press Ctrl + Enter Anastasiia Taran I’m a writer for Agilie. I’m working closely with the mobile and web application development, so I often write tips on the development process optimization, various design solutions, and relevant business cases. Other posts written by the author Comments (0) From old to new From new to old Top rated comments first Add a comment... To leave a comment, you have to log in. Log in Subscribe to the most useful newsletter on internet marketing Your name Your Email Subscribe Most discussed popular viewed Promoting iOS/Android Mobile App via AdWords, YouTube, Facebook, Yandex.Store and iAD: Bulletin Board App Case StudyCases Marina Bril21862 15 33 Promoting iOS/Android Mobile App via AdWords, YouTube, Facebook, Yandex.Store and iAD: Bulletin Board App Case Study Every month an ever-increasing number of clients turn to Netpeak with a clearly defined goal of promoting their mobile applications for iOS and Android. Specialists at the paid traffic department help achieve these goals by using different tools including How to create an effective sales funnel (Infographics)Marketing Shane Barker7268 7 29 How to create an effective sales funnel (Infographics) All tips for creating a perfect sales funnel in one inforgraphics that will help you improve your marketing strategy quickly Netpeak SEO Tool: fast, effective and easy-to-useSEO Simeon Emanuilov14817 7 19 Netpeak Agency SEO Tool: fast, effective and easy-to-use Netpeak Agency SEO Tool is all you need for a quick check of SEO elements Netpeak processes information about your visit using cookies to improve site performance. By continuing to browse our site, you agree to the use of these cookies. More information — Accept Internet marketing blog for businessBGPLRUTR Send material Netpeak Clients and feedback About us Contacts Privacy Policy What We Offer SEO and PPC Become a partner Our developments Conferences Online Advertising: Ukraine Online Advertising: Bulgaria Online Advertising: Kazakhstan Conferences: 8P & SaaS Nation 8Р: Business on the Web SaaS Nation Regions International Netpeak — performance marketing for business 17 288 followers 730 followers 2 452 followers 465 followers Я буду присылать тебе свежие статьи в Messenger (не чаще раза в неделю)]]></string>
    <string name="save_image">Save Image</string>
    <string name="download_pdf">Download PDF</string>
    <string name="search_hint">Search job...</string>
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
</resources>