<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/job"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.job.JobActivity"
    android:background="@color/light__white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="@dimen/_5sdp"
            app:expandedTitleMarginBottom="@dimen/_8sdp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <ImageView
                android:id="@+id/imgJobCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_collapseMode="parallax"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="bottom"
                android:background="@drawable/collaps_title_bg"/>

            <androidx.appcompat.widget.Toolbar
                android:background="@color/color__primary"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:popupTheme="@style/Theme.MaterialComponents.Light.DarkActionBar"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvJobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/_16ssp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"/>

            <TextView
                android:id="@+id/tvJobDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_text"
                android:textSize="@dimen/_14ssp"
                android:layout_marginBottom="5dp"/>

            <com.github.chrisbanes.photoview.PhotoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgJob"
                android:layout_marginBottom="@dimen/_8sdp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color__primary"
                android:layout_margin="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove_red_eye_24"
                    android:tint="@color/color__bkash"
                    android:layout_marginEnd="@dimen/_5sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvViews"
                    android:textColor="@color/color__bkash"
                    android:textSize="@dimen/_14sdp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color__primary"
                android:layout_margin="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:onClick="downloadPdf"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDlPdf"
                    android:text="@string/download_pdf"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_download"
                    android:layout_margin="@dimen/_5sdp"/>

                <Button
                    android:onClick="saveImage"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDlImage"
                    android:text="@string/save_image"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_save"
                    android:layout_margin="@dimen/_5sdp"/>

                <Button
                    android:visibility="gone"
                    android:onClick="suggestedSite"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSuggestedWebsite"
                    android:text="Suggested Website"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_baseline_help_outline_24"
                    android:layout_margin="@dimen/_5sdp"/>

                <Button
                    android:onClick="applyNow"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnApply"
                    android:text="Apply Now"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    app:icon="@drawable/ic_baseline_done"
                    android:layout_margin="@dimen/_5sdp"
                    android:backgroundTint="@color/color__bkash"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>